--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "lenis": "^1.3.15",
+    "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
